# clash-of-courses

./: .env.example  .gitignore  ERROR_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  LANGGRAPH_MIGRATION.md  MIGRATION_SUCCESS.md  README.md  TOOL_CARD_MAPPING.md  docker-compose.test.yml  docker-compose.yml  scenario.md  test_langgraph_agent.py  test_room_display.py  test_thinking_model.py
backend/: Dockerfile  README.md  db.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  run_tests.sh  seed_personas.py
backend/brs_backend/: __init__.py  main.py  seed_personas.py  seed_users.py
backend/brs_backend/agents/: __init__.py  advisor_agent.py  advisor_tools.py  chat_agent.py  department_agent.py  department_tools.py  router.py  student_agent.py  student_tools.py  student_tools_v2.py  student_tools_v3.py
backend/brs_backend/api/: agents.py  auth_endpoints.py  chat.py  chat_endpoints.py  chat_models.py  courses.py  enhanced_endpoints.py  requests.py  users.py
backend/brs_backend/auth/: __init__.py  endpoints.py  jwt_auth.py  jwt_handler.py  user_service.py
backend/brs_backend/chat/: __init__.py  endpoints.py
backend/brs_backend/core/: config.py  logging.py  utils.py
backend/brs_backend/database/: connection.py
backend/brs_backend/models/: api.py  database.py  tool_outputs.py
backend/brs_backend/utils/: __init__.py  calendar_utils.py
backend/tests/: FINAL_SUCCESS_REPORT.md  FINAL_TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  conftest.py  test_advisor_tools.py  test_agents.py  test_api.py  test_department_tools.py  test_models_postgresql.py  test_postgresql_native.py  test_session_conflicts.py  test_student_tools.py  test_tools_basic.py
database/: create_tables.sql  migration_v2_schema.sql
demo/: README.md  narrate.py  video_info.txt
tests/: README.md  pyproject.toml  test_approval_only.py  test_client_improvements.py  test_comprehensive_thinking.py  test_thinking_model.py  test_ui_workflow.py  test_workflow_clean.py
(+25 files in other folders)
